--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,7 @@
 {
     "short_name": "Neverita",
     "name": "Neverita Diet Tracker",
-    "icons": [
-        {
-            "src": "/icons/icon-192.png",
-            "type": "image/png",
-            "sizes": "192x192"
-        },
-        {
-            "src": "/icons/icon-512.png",
-            "type": "image/png",
-            "sizes": "512x512"
-        }
-    ],
+    "icons": [],
     "start_url": ".",
     "display": "standalone",
     "theme_color": "#f8fafc",
